# Fit-file-merger

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
fit_merger/: __init__.py  cli.py
fit_merger/core/: __init__.py  merger.py  parser.py
fit_merger/ui/: __init__.py  app.py
tests/: test_merger.py
